tools/clang/iterator_checker/tests/simple-invalid-iterators.txt
simple-invalid-iterators.cpp:9:31: error: [iterator-checker] Potentially invalid iterator used.
  for (; it != std::end(v); ++it) {
                              ^
simple-invalid-iterators.cpp:31:5: error: [iterator-checker] Potentially invalid iterator used.
  ++it;
    ^
simple-invalid-iterators.cpp:38:12: error: [iterator-checker] Potentially iterator mismatch.
  v2.erase(it);
           ^
3 errors generated.
